<resources>
    <string name="app_name">Digital House Foods</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>

    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="pratos_principais">Pratos Principais</string>
</resources>